<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/content"
    android:layout_margin="10dp">
    <!---<TextView
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:id="@+id/unit_logo"
        android:text="@string/app"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textColor="@color/colorPrimaryDark"
        android:textScaleX="2"/>-->
    <RelativeLayout
        android:id="@+id/layout_for_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:addStatesFromChildren="false"
        android:background="@drawable/del_app_back">

        <ImageView
            android:id="@+id/show_image_logo_of_bill"
            android:layout_width="44sp"
            android:layout_height="44sp"
            android:layout_margin="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/del_app_back" />

        <TextView
            android:id="@+id/heading_text"
            android:layout_width="wrap_content"
            android:layout_height="44sp"
            android:layout_margin="10dp"
            android:layout_toRightOf="@+id/show_image_logo_of_bill"
            android:text="@string/bill_details"
            android:textSize="44sp" />

        <TextView
            android:id="@+id/consumer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/heading_text"
            android:layout_margin="10dp"
            android:contextClickable="false"
            android:cursorVisible="false"
            android:text="@string/name"
            android:textAlignment="center"
            android:textSize="24sp" />
        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tid"
            android:text="@string/tid"
            android:textSize="24sp"
            android:layout_below="@+id/consumer_name"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/product_text"
            android:text="@string/product"
            android:textSize="24sp"
            android:layout_below="@+id/tid"
            android:textAlignment="center"/>-->
        <TextView
            android:id="@+id/productDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/consumer_name"
            android:layout_margin="10dp"
            android:autoLink="web|map|all"
            android:elevation="11dp"
            android:gravity="center_vertical|center_horizontal|center"
            android:selectAllOnFocus="false"
            android:text="@string/product"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/total_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/productDescription"
            android:layout_margin="5dp"
            android:text="@string/total_product"
            android:textScaleX="1.2"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/total_product_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/productDescription"
            android:layout_margin="5dp"
            android:layout_toRightOf="@+id/total_product"
            android:text="@string/defaultValue"
            android:textScaleX="1.2"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/productDescription"
            android:layout_margin="5dp"
            android:layout_toRightOf="@+id/total_product_view"
            android:text="@string/total_price"
            android:textScaleX="1.2"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/total_price_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/productDescription"
            android:layout_margin="5dp"
            android:layout_toRightOf="@+id/total_price"
            android:text="@string/defaultValue"
            android:textScaleX="1.2"
            android:textSize="20sp" />

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/total_price_view"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            android:backgroundTint="@color/year"
            android:contentDescription="@string/selfie"
            android:text="@string/selfie"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textScaleX="2.5"
            android:visibility="visible" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/payment_options"
        android:layout_below="@+id/layout_for_heading"
        android:layout_margin="10dp">
        <ImageView
            android:layout_width="120sp"
            android:layout_height="120sp"
            android:src="@drawable/paytm_logo"
            android:id="@+id/image1"
            android:contentDescription="@string/image1description"/>
        <ImageView
            android:layout_width="120sp"
            android:layout_height="120sp"
            android:src="@drawable/upi_logo"
            android:layout_toRightOf="@+id/image1"
            android:id="@+id/image2"
            android:contentDescription="@string/image2description"/>
        <ImageView
            android:layout_width="120sp"
            android:layout_height="120sp"
            android:src="@drawable/cash"
            android:id="@+id/image3"
            android:layout_toRightOf="@+id/image2"
            android:contentDescription="@string/cashImage"/>
    </RelativeLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/submit"
        android:text="@string/submit"
        android:layout_alignBottom="@+id/payment_options"
        android:layout_alignParentRight="true"
        android:textSize="24sp"
        android:textScaleX="1.5"
        android:layout_margin="10dp"/>

</RelativeLayout>